# keyvalue.py

./: .gitignore  PROJECT.md  README.md  flake.nix  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
src/keyvalue/: __init__.py  __main__.py  keys.py  store.py
tests/: test_cli.py  test_hello.py  test_keys.py  test_store.py
